# Box-Note-RAG

./: .env.example  .gitignore  Makefile  README.md  config.yml  main.py  pyproject.toml
app/: config.py  factory.py  graph.py  io.py  nodes.py  schema.py  state.py  telemetry.py
app/prompts/: __init__.py  manager.py  templates.yaml
app/retriever/: loaders.py  splitters.py  vector_store.py
scripts/: db_ops.py  ingest.py  show_graph.py
tests/: conftest.py  test_config.py  test_graph.py  test_io.py  test_nodes.py  test_prompts_manager.py  test_splitters.py
